--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Assignment</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <header>
+        <section class="new-year">
+            <div>
+                <h3 class="new-year-title">Happy New Year</h3>
+                <h1 class="new-year-party">New Year Party Celebration</h1>
+            </div>
+            
+
+        </section>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
