--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
                 <h3 class="new-year-title">Happy New Year</h3>
                 <h1 class="new-year-party">New Year Party Celebration</h1>
             </div>
-            
+            <div class="offer-class">
+                <h1 class="offer">65% OFF</h1>
+                <p class="offer-holyday">OUR HOLIDAY DEALS ARE BETTER</p>
+                <h1 class="offer-catagory">ALL CATEGORIES</h1>
+            </div>
+            <div>
+                <img class="new-year-photo" src="resources/New Year Photo.png" alt="">
+            </div>
 
         </section>
         <section>
