added happy new year picture

--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
                 <img class="new-year-photo" src="resources/New Year Photo.png" alt="">
             </div>
 
+        
+            <div class="main-column">
+                <nav class="column">
+                    <h1 class="column-title">Welcome to midnight party</h1>
+                    <p class="column-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </nav>
+                <nav class="column">
+                    <img src="resources/Group 70.png" alt="">
+                </nav>
+            </div>
         </section>
-        <section>
 
-        </section>
-        <section>
-
-        </section>
 
     </header>
     <main>
