--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <nav class="column">
                     <h1 class="column-title">Welcome to midnight party</h1>
                     <p class="column-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <button class="btn-primary">join now</button>
                 </nav>
                 <nav class="column">
                     <img src="resources/Group 70.png" alt="">
