--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     </nav>
                    
                     <nav>
-                        <h1>2024</h1>
-                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                        <h1 class="ok">2024</h1>
+                        <p class="dolar">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                         <img src="resources/Group 96.png" alt="">
                     </nav>
                 </div>
