added some picture

--- a/index.html
+++ b/index.html
@@ -63,8 +63,27 @@
                         <img src="resources/Group 96.png" alt="">
                     </nav>
                 </div>
+
+                <div>
+                <nav>
+                    <h3 class="the-best-gift">THE BEST GIFTS</h3>
+                    <h1 class="our-awsome-port">Our Awesome Portfolio</h1>
+                    <p class="dolor-sit">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </nav>
+                        <nav class="img-a">
+                            <img src="resources/Rectangle 3.png" alt="">
+                            <img src="resources/Rectangle 4.png" alt="">
+                            <img src="resources/Rectangle 5.png" alt="">
+                        </nav>
+                        <nav>
+                            <img src="resources/Rectangle 6.png" alt="">
+                            <img src="resources/Rectangle 7.png" alt="">
+                            <img src="resources/Rectangle 8.png" alt="">
+                        </nav>
+                </div>
           
         </section>
+       
 
 
     </header>
