added Subscribe now

--- a/index.html
+++ b/index.html
@@ -75,11 +75,16 @@
                             <img src="resources/Rectangle 4.png" alt="">
                             <img src="resources/Rectangle 5.png" alt="">
                         </nav>
-                        <nav>
+                        <nav class="img-a">
                             <img src="resources/Rectangle 6.png" alt="">
                             <img src="resources/Rectangle 7.png" alt="">
                             <img src="resources/Rectangle 8.png" alt="">
                         </nav>
+                </div>
+                <div class="main-mail">
+                    <P class="mail-g"><img class="mail" src="resources/Group 61.png" alt=""></P>
+                    <h1 class="subscribe-newspaper">Subscribe Newsletter</h1>
+                    <p class="paragraph-two">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 </div>
           
         </section>
